# LLMStudy

./: .gitignore  GraphRAG_and_LightRAG_学习指南.md  Harness_Engineering_学习指南.md  RAG_and_Fine-tuning_学习指南.md  README.md
.kiro/steering/: document-style.md
ai-learning-phase1/: README.md  pyproject.toml
ai-learning-phase1/01_python_basics/: 01_data_structures.ipynb  01_data_structures.py  02_numpy_basics.ipynb  02_numpy_basics.py  03_matplotlib_plot.ipynb  03_matplotlib_plot.py
ai-learning-phase1/02_neural_network/: 01_perceptron.ipynb  01_perceptron.py  02_mnist_from_scratch.ipynb  02_mnist_from_scratch.py  03_mnist_pytorch.ipynb  03_mnist_pytorch.py
ai-learning-phase1/03_transformer/: 01_attention.ipynb  01_attention.py  02_self_attention.ipynb  02_self_attention.py  03_mini_transformer.ipynb  03_mini_transformer.py
ai-learning-phase2/: README.md  pyproject.toml
ai-learning-phase2/04_embeddings/: 01_word_vectors.py  02_sentence_embeddings.py  03_similarity_search.py
ai-learning-phase2/05_rag/: 01_text_splitting.py  02_vector_store.py  03_rag_pipeline.py  RAG_and_Fine-tuning_学习指南.md
ai-learning-phase2/06_model_compression/: 01_quantization.py  02_distillation.py
ai-learning-phase2/07_multimodal/: 01_clip_concept.py  02_image_text_search.py
ai-learning-phase3/: README.md  pyproject.toml
ai-learning-phase3/08_langchain/: 01_basics.py  02_memory.py  03_rag_chain.py
ai-learning-phase3/09_agent/: 01_function_calling.py  02_react_agent.py  03_multi_tool_agent.py
ai-learning-phase3/10_project/: 01_knowledge_assistant.py
